fix title field; center and pad page content
nav-bar was overlapping page content so additionally padding was added
to avoid this

--- a/calcentral_events/app/assets/stylesheets/application.css
+++ b/calcentral_events/app/assets/stylesheets/application.css
@@ -22,3 +22,5 @@
        url('../assets/glyphicons-halflings-regular.ttf') format('truetype'), 
        url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
+.main{ padding: 30px 15px 40px; }
+body{ padding-top: 50px }
